# kleene

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.haskell-ci  cabal.project  kleene.cabal
.github/workflows/: haskell-ci.yml
bench/: Bench.hs
cbits/: sig.c
src/: Kleene.hs
src/Kleene/: Classes.hs  DFA.hs  ERE.hs  Equiv.hs  Functor.hs  Monad.hs  RE.hs
src/Kleene/Functor/: NonEmpty.hs
src/Kleene/Internal/: Functor.hs  Partition.hs  Pretty.hs  RE.hs  Sets.hs
tests/: kleene-utf8.hs
