cabal-version:      1.24
name:               kleene
version:            0.1.1
synopsis:           Kleene algebra
category:           Math
description:
  Kleene algebra
  .
  Think: Regular expressions
  .
  Implements ideas from /Regular-expression derivatives re-examined/ by
  Scott Owens, John Reppy and Aaron Turon
  <https://doi.org/10.1017/S0956796808007090>

homepage:           https://github.com/phadej/kleene
bug-reports:        https://github.com/phadej/kleene/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files: CHANGELOG.md
extra-doc-files:    example.png
tested-with:
  GHC ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.3

source-repository head
  type:     git
  location: https://github.com/phadej/kleene

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src

  -- GHC boot libraries
  build-depends:
      base          >=4.7.0.2  && <4.15
    , bytestring    >=0.10.4.0 && <0.11
    , containers    >=0.5.5.1  && <0.7
    , text          >=1.2.3.0  && <1.3
    , transformers  >=0.3.0.0  && <0.6

  if !impl(ghc >=8.0)
    build-depends: semigroups >=0.18.5 && <0.20

  -- Other dependencies
  build-depends:
      attoparsec
    , base-compat        >=0.10.5   && <0.12
    , lattices           >=2        && <2.1
    , MemoTrie           >=0.6.9    && <0.7
    , QuickCheck         >=2.12.6.1 && <2.15
    , range-set-list     >=0.1.3    && <0.2
    , regex-applicative  >=0.3.3    && <0.4
    , semigroupoids      >=5.3.2    && <5.4
    , step-function      >=0.2      && <0.3

  other-extensions:
    CPP
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    StandaloneDeriving
    UndecidableInstances

  exposed-modules:
    Kleene
    Kleene.Classes
    Kleene.DFA
    Kleene.Equiv
    Kleene.ERE
    Kleene.Functor
    Kleene.Functor.NonEmpty
    Kleene.Monad
    Kleene.RE

  -- "Internal-ish" modules
  exposed-modules:
    Kleene.Internal.Functor
    Kleene.Internal.Partition
    Kleene.Internal.Pretty
    Kleene.Internal.RE
    Kleene.Internal.Sets

  x-docspec-options:
    -XOverloadedStrings --check-properties "--property-variables=c p r s t q"
